// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrialStatusWidget component without the optional containerId prop matches the snapshot for namespace in active trial 1`] = `
<div
  class="gl-align-items-stretch gl-display-flex gl-flex-direction-column gl-w-full"
  data-testid="trial-widget-menu"
>
  <div>
    <div
      class="gl-align-items-center gl-display-flex gl-w-full"
    >
      <span
        class="gl-mb-1 gl-mr-3 nav-icon-container svg-container"
      >
        <img
          alt=""
          class="svg"
          src="illustrations/gitlab_logo.svg"
          width="16"
        />
      </span>
      <span
        class="gl-flex-grow-1 nav-item-name"
      >
        Ultimate Trial
      </span>
      <span
        class="gl-font-sm gl-mr-auto gl-overflow-hidden gl-whitespace-nowrap"
      >
        Day 10/30
      </span>
    </div>
    <div
      class="gl-align-items-stretch gl-display-flex gl-mt-2"
    >
      <gl-progress-bar-stub
        aria-hidden="true"
        class="gl-flex-grow-1"
        value="10"
      />
    </div>
    <b-button-stub
      class="gl-button gl-mt-3 gl-underline"
      data-testid="learn-about-features-btn"
      href="discover-path"
      size="sm"
      tag="button"
      title="Learn about features"
      type="button"
      variant="link"
    >
      <span
        class="gl-button-text"
      >
        Learn about features
      </span>
    </b-button-stub>
  </div>
</div>
`;

exports[`TrialStatusWidget component without the optional containerId prop matches the snapshot for namespace not in active trial 1`] = `
<div
  class="gl-align-items-stretch gl-display-flex gl-flex-direction-column gl-w-full"
  data-testid="trial-widget-menu"
>
  <div
    class="gl-display-flex gl-gap-4 gl-px-2 gl-w-full"
  >
    <gl-icon-stub
      class="gl-shrink-0 gl-text-blue-600!"
      name="information-o"
      size="16"
      variant="current"
    />
    <div>
      <div
        class="gl-font-bold"
      >
        Your 30-day trial has ended
      </div>
      <div
        class="gl-mt-3"
      >
        Looking to do more with GitLab?
        <b-button-stub
          class="gl-button gl-mb-1 gl-text-black-normal! gl-underline"
          data-testid="learn-about-features-btn"
          href="discover-path"
          size="sm"
          tag="button"
          title="Learn about features"
          type="button"
          variant="link"
        >
          <span
            class="gl-button-text"
          >
            Learn about features
          </span>
        </b-button-stub>
      </div>
    </div>
  </div>
</div>
`;
